--- a/builds/development/partials/app.html
+++ b/builds/development/partials/app.html
@@ -1,12 +1,14 @@
 <div class="artistsearch">
 	<div class="card search">
 		<h1>Artist Directory</h1>
-		<span *ngIf="name">name: {{ name }}</span>
+		<label *ngIf="name">name: {{ name }}</label>
+		<input #newArtist (keyup.enter)="addArtist(newArtist.value); newArtist.value='' ">
+		<button (click)="addArtist(newArtist.value); newArtist.value='' ">Add Artist</button>
 	</div>
 </div>
 
 <ul class="artistlist cf">
-	<li *ngFor="#item of artists">
+	<li (click)="onClick(item.name)" *ngFor="#item of artists">
 		<h2>{{ item.name }}</h2>
 		<h2>{{ item.school }}</h2>
 	</li>
