--- a/builds/development/partials/app.html
+++ b/builds/development/partials/app.html
@@ -1,15 +1,18 @@
 <div class="artistsearch">
 	<div class="card search">
 		<h1>Artist Directory</h1>
-		<label *ngIf="name">name: {{ name }}</label>
-		<input [(ngModel)]="name" #newArtist (input)="name=$event.target.value" (keyup.enter)="addArtist(newArtist.value); newArtist.value='' ">
-		<button (click)="addArtist(newArtist.value); newArtist.value='' ">Add Artist</button>
+		<label>Search <span *ngIf="query"> for: {{ query }}</span></label>
+		<input [(ngModel)]="query" placeholder="Type in search term">
+		<button class="btn" (click)="addArtist(newArtist.value); newArtist.value='' ">Add Artist</button>
 	</div>
 </div>
 
 <ul class="artistlist cf">
-	<li #artistContainer (click)="onClick(item.name, artistContainer)" *ngFor="#item of artists">
-		<h2>{{ item.name }}</h2>
-		<h2>{{ item.school }}</h2>
+	<li class="artist cf" #artistContainer (click)="onClick(item.name, artistContainer)" *ngFor="#item of artists">
+		<img src="images/{{ item.shortname }}_tn.jpg" alt="{{ item.name }} Photo">
+		<div class="info">
+			<h2>{{ item.name }}</h2>
+			<h3>{{ item.reknown }}</h3>
+		</div>
 	</li>
 </ul>
